using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Const 
{
    public const string ANIM_RUN = "run";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DEAD = "dead";
    public const string PLAYER = "player";
    public const string BOT = "bot";
    public const string WEAPON = "weapon";
    public const string WEAPONCLONE = "weaponclone";
    public const string WALL = "wall";
    public const string OBSTACLE = "obstacle";
    public const string TEXT_USING = "using";
    public const string TEXT_USE = "use";
}
